--- a/image_restoration.ipynb
+++ b/image_restoration.ipynb
@@ -299,23 +299,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 评价函数"
+    "# 评价函数\n",
+    "## Visually：主观鉴别、最符合人视觉感官的评价，但无法标准化。\n",
+    "## Visibility of Errors\n",
+    "计算图像degrade后的质量，即比较degrade后的图像与真实图像（distortion-free）之间的差剖面，即可视误差，通过 visibility of errors 评价图像质量。\n",
+    "### MSE\n",
+    "均方差，两点之间数值差异。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2\n",
-    "import numpy as np\n",
-    "import math\n",
-    "\n",
     "def mse(img1, img2):\n",
     "    mse = np.mean( (img1/255. - img2/255.) ** 2)\n",
-    "    return mse\n",
-    "    \n",
+    "    return mse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the MSE of inverse: 0.06272413087199703\n",
+      "the MSE of winner: 0.0194406751768399\n"
+     ]
+    }
+   ],
+   "source": [
+    "mse_in = mse(image, result_in)\n",
+    "mse_wn = mse(image, result_wn)\n",
+    "print(f'the MSE of inverse: {mse_in}')\n",
+    "print(f'the MSE of winner: {mse_wn}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PSNR\n",
+    "峰值信噪比，即峰值信号的能量与噪声的平均能量之比，通常表示的时候取 log 变成分贝（dB），由于 MSE 为真实图像与含噪图像之差的能量均值，而两者的差即为噪声，因此 PSNR 即峰值信号能量与 MSE 之比。定义式如下：$$PSNR = 10\\times\\log_{10} \\frac{MaxValue^2}{MSE} $$ \n",
+    "其中$MaxValue^2$表示为存储最大位数$2^{bits}-1$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def psnr1(img1, img2):\n",
     "    mse = np.mean((img1/1.0 - img2/1.0) ** 2 )\n",
     "    if mse < 1.0e-10:\n",
@@ -332,34 +370,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the MSE of inverse: 0.06272413087199703\n",
-      "the MSE of winner: 0.0194406751768399\n",
-      "the PSNR of inverse: 12.025653477114123\n",
-      "the PSNR of winner: 17.112886560515168\n"
+      "the PSNR of inverse: 12.025653477114126\n",
+      "the PSNR of winner: 17.112886560515165\n"
      ]
     }
    ],
    "source": [
-    "psnr_in = psnr2(image, result_in)\n",
-    "psnr_wn = psnr2(image, result_wn)\n",
-    "mse_in = mse(image, result_in)\n",
-    "mse_wn = mse(image, result_wn)\n",
-    "print(f'the MSE of inverse: {mse_in}')\n",
-    "print(f'the MSE of winner: {mse_wn}')\n",
+    "psnr_in = psnr1(image, result_in)\n",
+    "psnr_wn = psnr1(image, result_wn)\n",
+    "\n",
     "print(f'the PSNR of inverse: {psnr_in}')\n",
     "print(f'the PSNR of winner: {psnr_wn}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -383,6 +416,121 @@
    "metadata": {},
    "source": [
     "ssim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from PIL import Image\n",
+    "from scipy.signal import convolve2d\n",
+    " \n",
+    "def matlab_style_gauss2D(shape=(3,3),sigma=0.5):\n",
+    "#     2D gaussian mask - should give the same result as MATLAB's\n",
+    "#     fspecial('gaussian',[shape],[sigma])\n",
+    "\n",
+    "    m,n = [(ss-1.)/2. for ss in shape]\n",
+    "    y,x = np.ogrid[-m:m+1,-n:n+1]\n",
+    "    h = np.exp( -(x*x + y*y) / (2.*sigma*sigma) )\n",
+    "    h[ h < np.finfo(h.dtype).eps*h.max() ] = 0\n",
+    "    sumh = h.sum()\n",
+    "    if sumh != 0:\n",
+    "        h /= sumh\n",
+    "    return h\n",
+    " \n",
+    "def filter2(x, kernel, mode='same'):\n",
+    "    return convolve2d(x, np.rot90(kernel, 2), mode=mode)\n",
+    " \n",
+    "def compute_ssim(im1, im2, k1=0.01, k2=0.03, win_size=11, L=255):\n",
+    " \n",
+    "    if not im1.shape == im2.shape:\n",
+    "        raise ValueError(\"Input Imagees must have the same dimensions\")\n",
+    "    if len(im1.shape) > 2:\n",
+    "        raise ValueError(\"Please input the images with 1 channel\")\n",
+    "\n",
+    "    M, N = im1.shape\n",
+    "    C1 = (k1*L)**2\n",
+    "    C2 = (k2*L)**2\n",
+    "    window = matlab_style_gauss2D(shape=(win_size,win_size), sigma=1.5)\n",
+    "    window = window/np.sum(np.sum(window))\n",
+    "\n",
+    "    if im1.dtype == np.uint8:\n",
+    "        im1 = np.double(im1)\n",
+    "    if im2.dtype == np.uint8:\n",
+    "        im2 = np.double(im2)\n",
+    "\n",
+    "    mu1 = filter2(im1, window, 'valid')\n",
+    "    mu2 = filter2(im2, window, 'valid')\n",
+    "    mu1_sq = mu1 * mu1\n",
+    "    mu2_sq = mu2 * mu2\n",
+    "    mu1_mu2 = mu1 * mu2\n",
+    "    sigma1_sq = filter2(im1*im1, window, 'valid') - mu1_sq\n",
+    "    sigma2_sq = filter2(im2*im2, window, 'valid') - mu2_sq\n",
+    "    sigmal2 = filter2(im1*im2, window, 'valid') - mu1_mu2\n",
+    "\n",
+    "    ssim_map = ((2*mu1_mu2+C1) * (2*sigmal2+C2)) / ((mu1_sq+mu2_sq+C1) * (sigma1_sq+sigma2_sq+C2))\n",
+    "\n",
+    "    return np.mean(np.mean(ssim_map))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8954012736550456"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compute_ssim(image, result_w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/panyining/anaconda3/envs/torch2/lib/python3.6/site-packages/ipykernel_launcher.py:4: UserWarning: Inputs have mismatched dtype.  Setting data_range based on im1.dtype.\n",
+      "  after removing the cwd from sys.path.\n",
+      "/Users/panyining/anaconda3/envs/torch2/lib/python3.6/site-packages/ipykernel_launcher.py:5: UserWarning: Inputs have mismatched dtype.  Setting data_range based on im1.dtype.\n",
+      "  \"\"\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9999999999999967 0.8915933351667733\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "from skimage import metrics\n",
+    "\n",
+    "ssim_i = metrics.structural_similarity(image, result_i)\n",
+    "ssim_w = metrics.structural_similarity(image, result_w)\n",
+    "\n",
+    "# ssim_in = measure.compare_ssim(image, result_in)\n",
+    "# ssim_wn = measure.compare_ssim(image, result_wn)\n",
+    "print(ssim_i, ssim_w)"
    ]
   },
   {
